--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 MONGO_URI=mongodb://database:27017/test
 PORT=5000
 JWT_SECRET=your_secret_key
-EMAIL=saptakb738@gmail.com
-EMAIL_PASS="felx mewl zwbg rxxa"
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:5000
+
+# did not provide due to security reasons
+
+# EMAIL=smtp.example.com
+# EMAIL_PASS=smtp_pwd
+
